# evalkit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: architecture.md
docs/adr/: 001-llm-as-judge-architecture.md  002-duckdb-over-postgres.md  003-ensemble-voting-strategy.md
examples/: basic_evaluation.py  custom_rubric.py
src/evalkit/: __init__.py
src/evalkit/core/: __init__.py  config.py  models.py  storage.py
src/evalkit/dashboard/: __init__.py  app.py
src/evalkit/generators/: __init__.py  base.py  synthetic.py  templates.py
src/evalkit/judges/: __init__.py  base.py  ensemble.py  llm_judge.py  rubrics.py
src/evalkit/regression/: __init__.py  comparator.py  reporter.py  tracker.py
tests/: conftest.py  test_api_contracts.py  test_e2e_customer_scenarios.py  test_generators.py  test_judges.py  test_models.py  test_non_functional.py  test_regression.py  test_scaling.py  test_storage.py
