[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evalkit"
version = "0.1.0"
description = "Production-grade LLM evaluation framework with judge ensembles, synthetic data generation, and regression tracking."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "evalkit contributors" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0,<3.0",
    "duckdb>=1.0,<2.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "tenacity>=8.0",
    "structlog>=24.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.30"]
dashboard = ["streamlit>=1.35", "plotly>=5.0", "pandas>=2.0"]
all = ["evalkit[openai,anthropic,dashboard]"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.0",
]

[project.urls]
Homepage = "https://github.com/cortexark/evalkit"
Documentation = "https://github.com/cortexark/evalkit#readme"
Repository = "https://github.com/cortexark/evalkit"
Issues = "https://github.com/cortexark/evalkit/issues"

[project.scripts]
evalkit = "evalkit.dashboard.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/evalkit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring external services",
]

[tool.ruff]
target-version = "py311"
line-length = 99
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.coverage.run]
source = ["src/evalkit"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 85
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "@overload",
]
